--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -1,12 +1,14 @@
-name: Push Debugger
+name: Debug Sync
 on: [push]
 
 jobs:
   debug:
     runs-on: ubuntu-latest
     steps:
-    - name: Check incoming commit
+    - uses: actions/checkout@v4
+    
+    - name: Show Remotes
       run: |
-        echo "Last commit author: ${{ github.actor }}"
-        echo "Commit SHA: ${{ github.sha }}"
-        echo "Event payload: ${{ toJson(github.event) }}"
+        git remote add test https://${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git
+        git ls-remote test
+        git remote remove test
