--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,22 +1,34 @@
-name: Sync to Private Repo
+name: Private Repo Sync
 on: [push]
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # Required for full history
+        fetch-depth: 0  # Critical for full history
 
-    - name: Configure Mirror
+    - name: Configure Authentication
       run: |
+        # Encode PAT for Git operations
+        echo "machine github.com" > ~/.netrc
+        echo "login x" >> ~/.netrc
+        echo "password ${{ secrets.GH_PAT }}" >> ~/.netrc
+        chmod 600 ~/.netrc
+
+    - name: Add Target Remote
+      run: |
+        git remote add mirror https://github.com/oterdimanx/reference-web.git
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git remote add mirror "https://${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
-        git remote -v  # Verify remote configuration
 
-    - name: Push to Mirror
+    - name: Debug Verification
+      run: |
+        git ls-remote mirror
+        git remote -v
+        git branch --all
+
+    - name: Force Push
       run: |
         git push --force-with-lease mirror HEAD:main
