--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: Private Repo Sync
+name: Guaranteed Sync
 on: [push]
 
 jobs:
@@ -7,28 +7,32 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # Critical for full history
+        fetch-depth: 0
 
-    - name: Configure Authentication
+    - name: Nuclear Authentication
       run: |
-        # Encode PAT for Git operations
+        # 1. PAT in URL
+        git remote add mirror "https://${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
+        
+        # 2. .netrc fallback
         echo "machine github.com" > ~/.netrc
         echo "login x" >> ~/.netrc
         echo "password ${{ secrets.GH_PAT }}" >> ~/.netrc
         chmod 600 ~/.netrc
+        
+        # 3. Header authentication
+        git config --global http.https://github.com/.extraheader "AUTHORIZATION: basic $(echo -n x:${{ secrets.GH_PAT }} | base64)"
 
-    - name: Add Target Remote
+    - name: Bruteforce Verification
       run: |
-        git remote add mirror https://github.com/oterdimanx/reference-web.git
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
+        # Test raw HTTP access
+        curl -sH "Authorization: token ${{ secrets.GH_PAT }}" \
+          https://api.github.com/repos/oterdimanx/reference-web | jq .id
+        
+        # Test Git protocol
+        git -c http.extraHeader="Authorization: Bearer ${{ secrets.GH_PAT }}" \
+          ls-remote https://github.com/oterdimanx/reference-web
 
-    - name: Debug Verification
+    - name: Obliterate Push
       run: |
-        git ls-remote mirror
-        git remote -v
-        git branch --all
-
-    - name: Force Push
-      run: |
-        git push --force-with-lease mirror HEAD:main
+        git push --force mirror HEAD:main
