--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: Sync Repositories
+name: Safe Mirror Sync
 on: [push]
 
 jobs:
@@ -7,14 +7,14 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Add Authenticated Remote
+    - name: Configure Mirror (PAT in URL Only)
       run: |
         git remote add mirror "https://${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
 
-    - name: Verify Remote Access
+    - name: Test Connection
       run: git ls-remote mirror
 
     - name: Push Changes
-      run: git push mirror HEAD:main
+      run: git push --force-with-lease mirror HEAD:main
