--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: Safe Mirror Sync
+name: Secure Sync
 on: [push]
 
 jobs:
@@ -7,9 +7,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Configure Mirror (PAT in URL Only)
+    - name: Configure Authenticated Remote
       run: |
-        git remote add mirror "https://${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
+        # Use GitHub's recommended PAT format
+        git remote add mirror "https://x-access-token:${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
 
