--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: Secure Sync
+name: Secure Public Repo Sync
 on: [push]
 
 jobs:
@@ -6,21 +6,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        persist-credentials: false  # Critical for public repos
 
-    # SECRET VALIDATION STEP HERE
-    - name: Validate PAT Secret
+    - name: Configure Minimal Git Identity
       run: |
-        echo "PAT exists: ${#GH_PAT}"  # Should output "PAT exists: 40"
-        echo "First 5 chars: ${GH_PAT:0:5}"  # Partial verification
-
-    - name: Configure Authenticated Remote
-      run: |
-        git remote add mirror "https://x-access-token:${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
 
-    - name: Test Connection
+    - name: Add PAT-authenticated Remote
+      run: |
+        git remote add mirror "https://${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
+
+    - name: Verify Remote Access
       run: git ls-remote mirror
 
     - name: Push Changes
-      run: git push --force-with-lease mirror HEAD:main
+      run: git push mirror HEAD:main
