--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -22,4 +22,4 @@ jobs:
       run: git ls-remote mirror
 
     - name: Push Changes
-      run: git push --force-with-lease mirror HEAD:main
+      run: git push -u origin master
