--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,6 +13,7 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
+        git config --unset-all http.https://github.com/.extraheader
 
     - name: Add PAT-authenticated Remote
       run: |
@@ -22,4 +23,4 @@ jobs:
       run: git ls-remote mirror
 
     - name: Push Changes
-      run: git push -u origin master
+      run: git push --force-with-lease mirror HEAD:main
