--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -5,22 +5,25 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-      with:
-        persist-credentials: false  # Critical for public repos
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
-    - name: Configure Minimal Git Identity
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git config --unset-all http.https://github.com/.extraheader
+      - name: Configure Minimal Git Identity
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git config --unset-all http.https://github.com/.extraheader
 
-    - name: Add PAT-authenticated Remote
-      run: |
-        git remote add mirror "https://${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
+      - name: Add PAT-authenticated Remote
+        run: |
+          git remote add mirror "https://${{ secrets.GH_PAT }}@github.com/oterdimanx/reference-web.git"
 
-    - name: Verify Remote Access
-      run: git ls-remote mirror
+      - name: Fetch All Branches
+        run: git fetch --all
 
-    - name: Push Changes
-      run: git push origin master
+      - name: Push Changes to Mirror Remote
+        env:
+          BRANCH: ${{ github.ref_name }}
+        run: |
+          git push mirror $BRANCH:$BRANCH --force
