--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -11,8 +11,8 @@ jobs:
 
       - name: Configure Minimal Git Identity
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
           git config --unset-all http.https://github.com/.extraheader
 
       - name: Add PAT-authenticated Remote
