--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -9,11 +9,16 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Configure Minimal Git Identity
+      - name: Debug Home Directory
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git config --unset-all http.https://github.com/.extraheader
+          ls -al $HOME
+          ls -al $HOME/.gitconfig || echo "No .gitconfig"
+
+      - name: Configure Minimal Git Identity (local)
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git config --unset-all http.https://github.com/.extraheader || true
 
       - name: Add PAT-authenticated Remote
         run: |
